--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "autoprefixer": "^10.2.3",
     "hover.css": "^2.3.2",
     "node-sass": "^4.14.1",
+    "postcss": "^8.2.4",
     "react": "^17.0.1",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.1",
@@ -26,14 +28,17 @@
     "react-typing-animation": "^1.6.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
+    "tailwindcss": "^2.0.2",
     "typewriter-effect": "^2.17.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run watch:css && react-scripts start",
+    "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:css": "postcss src/style/tailwind.css -o src/style/app.css",
+    "watch:css": "postcss src/style/tailwind.css -o src/style/app.css"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +59,10 @@
     ]
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^7.0.0"
+    "copy-webpack-plugin": "^7.0.0",
+    "npm-run-all": "^4.1.5",
+    "onchange": "^7.1.0",
+    "postcss-cli": "^8.3.1",
+    "postcss-nested": "^5.0.3"
   }
 }
