--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio-website",
+  "homepage": "http://facumartinn.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -30,6 +31,8 @@
   "scripts": {
     "start": "npm run watch:css && react-scripts start",
     "build": "npm run build:css && react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build:css": "postcss src/style/tailwind.css -o src/style/app.css",
@@ -55,6 +58,7 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^7.0.0",
+    "gh-pages": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
     "postcss-cli": "^8.3.1",
