--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,13 @@
 # dependencies
 /node_modules
 /.pnp
-.pnp.js
+/.pnp.js
 
 # testing
 /coverage
 
 # production
-build
+/build
 
 # misc
 .DS_Store
